envoy.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 15444
static_resources:
  listeners:
    - name: listener_00
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9090
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: sample_prefix
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/path/to/your/filter.wasm"
                          allow_precompiled: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: route_00
                  virtual_hosts:
                    - name: service_00
                      domains: ["*"]
                      routes:
                        - match: 
                            prefix: "/" 
                          route: 
                            host_rewrite_literal: ivapp1307330.devin3.ms.com
                            cluster: cluster_00
  clusters:
    - name: cluster_00
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: cluster_00
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: <host_machine_address>
                      port_value: <port>
    # The azure_entra cluster definition has been removed or modified
    # based on your setup, as direct JWKS fetching from login.microsoftonline.com
    # might not be required if the logic is handled within your WASM filter.
